--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ div.gallery img {
 
 		</a>
 
-<div style="margin-left: 1259px;" class="placeholder">
+<div class="placeholder">
 	<a href="images-uv72Nahpt-transformed.JPEG" target="_blank" alt="placeholder_image">
 		<img src="images-uv72Nahpt-transformed.JPEG"width="570" height="170" >
 	</a>
