--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@ div.gallery img {
 		</a>
 
 <div class="placeholder">
-	<a href="images-uv72Nahpt-transformed.JPEG" target="_blank" alt="placeholder_image">
-		<img src="images-uv72Nahpt-transformed.JPEG"width="570" height="170" >
+	<a href="istockphoto-1159637659-612x612.jpg" target="_blank" alt="placeholder_image">
+		<img src="istockphoto-1159637659-612x612.jpg"width="570" height="170" >
 	</a>
 </div>		 
 
